# coproduct

./: Cargo.toml  README.md
examples/: enum_extension.rs  generic.rs
idtype_macro/: Cargo.toml
idtype_macro/src/: lib.rs
src/: coproduct.rs  count.rs  counter.rs  lib.rs  merge.rs  public_traits.rs  type_inequality.rs  typed_any.rs  union.rs
tests/: derive_idtype.rs
tests/must_not_compile/: append1.rs  append1.stderr  append2.rs  append2.stderr  append3.rs  append3.stderr  append4.rs  append4.stderr  type_id_collision.rs  type_id_collision.stderr
