[package]
name = "coproduct"
version = "0.1.0"
edition = "2021"
authors = ["Joonatan Saarhelo <joon.saar@gmail.com>"]
description = "Generic coproduct type with minimal memory footprint"
license = "MIT"
keywords = ["coproduct", "data-structure", "generic"]
repository = "https://github.com/joonazan/coproduct"

[dependencies]
frunk = "0.4"