[package]
name = "coproduct"
version = "0.2.0"
edition = "2021"
authors = ["Joonatan Saarhelo <joon.saar@gmail.com>"]
description = "Generic coproduct type with minimal memory footprint"
license = "MIT"
keywords = ["coproduct", "data-structure", "generic"]
repository = "https://github.com/joonazan/coproduct"
documentation = "https://docs.rs/coproduct"
readme = "README.md"

[dependencies]
coproduct-idtype-macro = {path = "idtype_macro"}

[dev-dependencies]
trybuild = "1.0"